# better-dotfiles

./: .gitignore  .zprofile  CITATION.cff  README.md  pr.sh  pyproject.toml  random.txt  setup.cfg  setup.py  trending-formulae.py  trending-homebrew.py
docs/source/: conf.py  index.rst
docs/source/pages/: aiohttp_quick_start.rst  commands.rst  tests.rst
dotfiles/git/: .gitconfig  .gitignore
dotfiles/home/: .zshenv.sh
dotfiles/install/: Brewfile
dotfiles/macos/: defaults.sh
home_files/: .zshrc.sh
home_files/.config/bash/: aliases.sh.tt  functions-public.sh.tt
home_files/.config/git/: configuration.tt
home_files/.config/install/: Brewfile  Caskfile  Rustfile  npmfile
src/better_dotfiles/: Dockerfile  Makefile  __init__.py  __main__.py  better_dotfiles.py  config.py  creds.py  docker-compose.yml  mypy.ini  trending_homebrew.py
src/better_dotfiles/config/: config.json
tests/: better_dotfiles_test.py
