[build-system]
requires = ["setuptools", "setuptools-scm"] #["poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"     #"poetry.core.masonry.api"

[project]
name = "better_dotiles"
description = "Better tools for managing dotfiles."
requires-python = ">=3.11.1"
keywords = ["dotfiles"]
license = { text = "MIT License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["requests", 'importlib-metadata; python_version>"3.11"']
dynamic = ["version", "readme"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
cli-name = "better_dotfiles.better_dotfiles:trending_homebrew"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 80
skip-string-normalization = false
skip-magic-trailing-comma = true
include = '\.pyi?$'
exclude = '''

(
  /(
     \.eggs          # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | .coveragerc
)
'''

[tool.isort]
ensure_newline_before_comments = true
default_section = "LOCALFOLDER"
include_trailing_comma = true
force_single_line = true
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = [
  "numpy",
  "pandas",
  "keras",
  "tensorflow",
  "sklearn",
  "matplotlib",
  "scipy",
]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
line_length = 80
profile = "black"
float_to_top = true

[tool.poetry]
name = "better_dotfiles"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
black = { version = "^21.6b0", allow-prereleases = true }
python = "^3.8.5"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
pytest = "^5.2"
ptpython = "^3.0.19"
flake8 = "^3.8.5"
mypy = "^0.910"
isort = "^5.9.2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "better_dotfiles.VERSION" }
readme = { file = ["README.rst", "USAGE.rst"] }

[tool.setuptools.packages]
find = {} # Scan the project directory with the default parameters
