[metadata]
name = better_dotfiles

[options]
install_requires =
    requests
    importlib-metadata; python_version > "3.7"
package_dir =
    src=
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cli-name = better_dotfiles.better_dotfiles:trending_homebrew

[flake8]
exclude = .git, __pycache__, docs, old, build, dist
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B, C, E, F, W, T4

[isort]
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER
default_section = LOCALFOLDER
known_third_party =
    numpy,
    pandas,
    keras,
    tensorflow,
    sklearn,
    matplotlib,
    scipy
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True
force_grid_wrap = 0
force_single_line = True
use_parentheses = True
ensure_newline_before_comments = True
line_length = 80
profile = black
float_to_top = True

[mypy]
files = src/better_dotiles, tests
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_subclassing_any = false
strict_optional = false
no_implicit_optional = false
warn_no_return = true
warn_unreachable = true

[pylint.config]
[MASTER]

extension-pkg-whitelist =
    numpy,
    pandas,
    keras,
    tensorflow,
    sklearn,
    matplotlib,
    scipy,
    pytest_aiohttp

[MESSAGES CONTROL]

disable = R, C
enable = E, W
jobs = 1
confidence = HIGH

[FORMAT]

max-line-length = 80
max-module-lines = 2000

[tool:pytest]
testpaths = tests/
addopts = --cov=better_dotfiles --cov-config=.coveragerc --cov-fail-under=1
